--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -24,12 +24,12 @@ jobs:
 
       - name: Verify root files exist
         run: |
-          ls -la index.html styles.css script.js || (echo "Missing files - ensure index.html, styles.css, script.js are in repo root" && exit 1)
+          ls -la index.html login.html styles.css script.js || (echo "Missing files - ensure index.html, login.html, styles.css, script.js are in repo root" && exit 1)
 
       - name: Prepare site
         run: |
           mkdir -p _site
-          cp index.html styles.css script.js _site/
+          cp index.html login.html styles.css script.js _site/
           ls -la _site/
 
       - name: Setup Pages
